# rocket_bulk_metadata_scaler

./: .gitignore  Dockerfile  README.md  configmap.json  main.py  pyproject.toml  run_local.py  sample_reference.csv  ui.py
.github/workflows/: build-image.yaml
bulk_metadata_scaler_app/: __init__.py  activities.py  config.py  main.py  models.py  workflow.py
components/: objectstore.yaml
frontend/: config.json
tests/: __init__.py  test_activities.py
